[gd_scene load_steps=4 format=3 uid="uid://dhr8ir0mkasg2"]

[ext_resource type="Script" path="res://Scripts/SidePanelNodes/ActionNodePanel.gd" id="1_bfmjj"]

[sub_resource type="LabelSettings" id="LabelSettings_l2jrj"]
font_size = 10
font_color = Color(0.956863, 0.117647, 0.172549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kddgl"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="ActionContainer" type="VBoxContainer"]
offset_right = 280.0
offset_bottom = 98.0
theme_override_constants/separation = 10
script = ExtResource("1_bfmjj")

[node name="ActionTypeContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ActionTypeLabel" type="Label" parent="ActionTypeContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Action type"

[node name="ActionTypeDrop" type="OptionButton" parent="ActionTypeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
item_count = 2
selected = 0
allow_reselect = true
popup/item_0/text = "ActionOption"
popup/item_0/id = 0
popup/item_1/text = "ActionVariable"
popup/item_1/id = 1

[node name="OptionIDContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionIDLabel" type="Label" parent="OptionIDContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Option ID"

[node name="VBoxContainer" type="VBoxContainer" parent="OptionIDContainer"]
layout_mode = 2

[node name="OptionIDEdit" type="LineEdit" parent="OptionIDContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Value"

[node name="OptionNotFindLabel" type="Label" parent="OptionIDContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Can't find the option"
label_settings = SubResource("LabelSettings_l2jrj")

[node name="VariableContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VariableLabel" type="Label" parent="VariableContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Variable"

[node name="VariableDrop" type="OptionButton" parent="VariableContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
allow_reselect = true

[node name="OperatorContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OperatorLabel" type="Label" parent="OperatorContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Operator"

[node name="OperatorDrop" type="OptionButton" parent="OperatorContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
item_count = 5
selected = 0
popup/item_0/text = "="
popup/item_0/id = 0
popup/item_1/text = "+"
popup/item_1/id = 1
popup/item_2/text = "-"
popup/item_2/id = 2
popup/item_3/text = "*"
popup/item_3/id = 3
popup/item_4/text = "/"
popup/item_4/id = 4

[node name="ValueContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ValueLabel" type="Label" parent="ValueContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Value"

[node name="BooleanEdit" type="CheckButton" parent="ValueContainer"]
visible = false
layout_mode = 2

[node name="NumberEdit" type="SpinBox" parent="ValueContainer"]
visible = false
layout_mode = 2

[node name="StringEdit" type="LineEdit" parent="ValueContainer"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "Value"
expand_to_text_length = true

[node name="DefaultLabel" type="Label" parent="ValueContainer"]
layout_mode = 2
text = "Please select a variable first"
label_settings = SubResource("LabelSettings_kddgl")

[connection signal="item_selected" from="ActionTypeContainer/ActionTypeDrop" to="." method="_on_action_type_drop_item_selected"]
[connection signal="text_changed" from="OptionIDContainer/VBoxContainer/OptionIDEdit" to="." method="update_graph_node"]
[connection signal="item_selected" from="VariableContainer/VariableDrop" to="." method="update_graph_node"]
[connection signal="item_selected" from="OperatorContainer/OperatorDrop" to="." method="_on_operator_drop_item_selected"]
[connection signal="toggled" from="ValueContainer/BooleanEdit" to="." method="update_graph_node"]
[connection signal="value_changed" from="ValueContainer/NumberEdit" to="." method="update_graph_node"]
[connection signal="text_changed" from="ValueContainer/StringEdit" to="." method="update_graph_node"]
